test/spec_vectors/simd_i32x4_arith2/fail/module_21.wat
(module (func $i32x4.min_u-arg-empty (result v128) (i32x4.min_u)))